# k3tchup

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/actions/setup-msvc/: action.yml
.github/actions/use-msvc/: action.yml
.github/workflows/: ci.yml
cmake/: discover_tests.cmake
examples/: CMakeLists.txt  run_time_optional.cpp  vector_of_optionals.cpp
include/k3/: k3tchup.hpp  k3tchup_main.hpp
include/k3/k3tchup/: assert.hpp  error.hpp  fixture.hpp  hash.hpp  result.hpp  runner.hpp  test.hpp
src/k3/k3tchup/: error.cpp  fixture.cpp  result.cpp  runner.cpp  test.cpp
